K8s_manifests/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTP", "Port": "80", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/security-groups: sg-03a34c78d5bc9bfbb
    alb.ingress.kubernetes.io/group.name: "shared-routing"
      #alb.ingress.kubernetes.io/group.order: "2"
spec:
  ingressClassName: alb
  rules:
    - host: k8s-sharedrouting-ffe5881db1-1805252111.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /argocd/
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 8080
