K8s_manifests/network_policy_python.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: python-egress-to-mariadb
  namespace: ivolve
spec:
  podSelector:
    matchLabels:
      app: python-app
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mariadb
      ports:
        - protocol: TCP
          port: 3306
